Update : deleted old index file and updated images and info of our people page

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -1088,21 +1088,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <h2 style="font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 20px;">Board of Founders</h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 40px;">
             <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Dr. Amit Goel" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Dr. Amit Goel</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Director & Co-founder</p>
-              <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-            </div>
-            <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Amit Aggarwal" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Amit Aggarwal</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Co-founder</p>
-              <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-            </div>
-            <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Maetika Aggarwal" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Maetika Aggarwal</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Director</p>
+              <img src="./img/team-1.png" alt="Satyender Kumar" style="border-radius: 50%; margin-bottom: 15px;">
+              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Satyender Kumar</h3>
+              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">CEO And Founder</p>
               <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
             </div>
           </div>
@@ -1111,33 +1099,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           <h2 style="font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 20px;">Executive Leadership</h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
             <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Ram Taneja" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Ram Taneja</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Vice President</p>
+              <img src="./img/team-2.png" alt="Ajay Dubey" style="border-radius: 50%; margin-bottom: 15px;">
+              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Ajay Dubey</h3>
+              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Senior Patent Research Analyst</p>
               <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
             </div>
             <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Nishant Singh" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Nishant Singh</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Vice President</p>
+              <img src="./img/11.png" alt="Sanjiv Kumar" style="border-radius: 50%; margin-bottom: 15px;">
+              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Sanjiv Kumar</h3>
+              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Data Analyst</p>
               <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
             </div>
             <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Manoj Poonia" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Manoj Poonia</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Vice President</p>
-              <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-            </div>
-            <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Dr. Gerhard Hirsch" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Dr. Gerhard Hirsch</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Vice President</p>
-              <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-            </div>
-            <div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center;">
-              <img src="./img/11.png" alt="Rakesh Pandey" style="border-radius: 50%; margin-bottom: 15px;">
-              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Rakesh Pandey</h3>
-              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Vice President</p>
+              <img src="./img/team-4.png" alt="Vishruti Vishen" style="border-radius: 50%; margin-bottom: 15px;">
+              <h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Vishruti Vishen</h3>
+              <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Patent Research Analyst</p>
               <a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
             </div>
           </div>
