Update: our people

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -1077,47 +1077,46 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         </div> <!-- container -->
     </section>
 
-    <section style="background-color: #f9f9f9; padding: 40px 20px;">
-		<div style="max-width: 1200px; margin: 0 auto;">
-			<p style="text-align: center; color: #666; font-size: 1rem; margin-bottom: 40px;">
-				Our forward-thinking executive team consists of committed, goal-oriented, and seasoned professionals. This combined knowledge and experience, together with their collaboration with our global workforce, works to build value for all our stakeholders: employees, customers, investors, and local communities globally.
-			</p>
-	
-			<!-- Board of Founders Section -->
-			<h2 style="font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 20px;">Board of Founders</h2>
-			<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 40px;">
-				<div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center; max-height: 350px; overflow: hidden;">
-					<img src="./img/team-1.png" alt="Satyender Kumar" style="border-radius: 50%; margin-bottom: 15px; max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;">
-					<h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Satyender Kumar</h3>
-					<p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">CEO And Founder</p>
-					<a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-				</div>
-			</div>
-	
-			<!-- Executive Leadership Section -->
-			<h2 style="font-size: 1.5rem; font-weight: bold; text-align: center; margin-bottom: 20px;">Executive Leadership</h2>
-			<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
-				<div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center; max-height: 350px; overflow: hidden;">
-					<img src="./img/team-2.png" alt="Ajay Dubey" style="border-radius: 50%; margin-bottom: 15px; max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;">
-					<h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Ajay Dubey</h3>
-					<p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Senior Patent Research Analyst</p>
-					<a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-				</div>
-				<div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center; max-height: 350px; overflow: hidden;">
-					<img src="./img/team-3.jpg" alt="Sanjiv Kumar" style="border-radius: 50%; margin-bottom: 15px; max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;">
-					<h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Sanjiv Kumar</h3>
-					<p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Data Analyst</p>
-					<a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-				</div>
-				<div style="background-color: #eaf3fc; border: 1px solid #d1e3f8; border-radius: 10px; padding: 20px; text-align: center; max-height: 350px; overflow: hidden;">
-					<img src="./img/team-4.png" alt="Vishruti Vishen" style="border-radius: 50%; margin-bottom: 15px; max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;">
-					<h3 style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">Vishruti Vishen</h3>
-					<p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Patent Research Analyst</p>
-					<a href="#" style="color: #007BFF; text-decoration: none; font-weight: bold;">Read More</a>
-				</div>
-			</div>
+	<section style="text-align: center; padding: 50px 20px; background-color: #111;">
+		<h2 style="font-size: 2.5rem; margin-bottom: 10px;">Our Brain</h2>
+		<p style="font-size: 1.2rem; color: #aaa; margin-bottom: 40px;">Explore Our Success Stories and Innovative Projects</p>
+		<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer;" onclick="openPopup('Satyender Kumar', 'CEO and Founder with 7+ years of experience in IP domain.', './img/team-1.png')">
+			<img src="./img/team-1.png" alt="Satyender Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+		  </div>
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer;" onclick="openPopup('Ajay Kumar Dubey', 'Senior patent research analyst with 4+ years of experience in IP domain.', './img/team-2.png')">
+			<img src="./img/team-2.png" alt="Ajay Kumar Dubey" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+		  </div>
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer;" onclick="openPopup('Sanjiv Kumar', 'Data Analyst.', './img/team-3.jpg')">
+			<img src="./img/team-3.jpg" alt="Sanjiv Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+		  </div>
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer;" onclick="openPopup('Vishruti Vishen', 'Patent Research analyst.', './img/team-4.png')">
+			<img src="./img/team-4.png" alt="Vishruti Vishen" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+		  </div>
 		</div>
-	</section>
+	  </section>
+	
+	  <div id="popup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); justify-content: center; align-items: center; z-index: 1000;">
+		<div style="background: #fff; color: #111; padding: 20px; border-radius: 20px; text-align: center; max-width: 400px; width: 90%; position: relative;">
+		  <button onclick="closePopup()" style="position: absolute; top: 10px; right: 10px; font-size: 20px; background: none; border: none; cursor: pointer; color: #111;">&times;</button>
+		  <img id="popup-img" src="" alt="Profile Picture" style="width: 100px; height: 100px; border-radius: 50%; margin-bottom: 20px;">
+		  <h3 id="popup-name" style="margin: 10px 0;"></h3>
+		  <p id="popup-description" style="font-size: 1rem; color: #555;"></p>
+		</div>
+	  </div>
+	
+	  <script>
+		function openPopup(name, description, imgSrc) {
+		  document.getElementById('popup-name').textContent = name;
+		  document.getElementById('popup-description').textContent = description;
+		  document.getElementById('popup-img').src = imgSrc;
+		  document.getElementById('popup').style.display = 'flex';
+		}
+	
+		function closePopup() {
+		  document.getElementById('popup').style.display = 'none';
+		}
+	  </script>
       
 	
 	
