update: contact us

--- a/index.html
+++ b/index.html
@@ -2764,9 +2764,11 @@
 <p><strong><a href="mailto:info@mallorntechnology.com" style="text-decoration: none; color: inherit;">info@mallorntechnology.com</a></strong></p>
   </div>
   <form
-    style="flex: 2; max-width: 60%;"
-    onsubmit="alert('Form submitted successfully!'); return false;"
-  >
+  method="POST"
+  action="https://script.google.com/macros/s/AKfycbwGJYz9QCeBEI_5WbcxS_ZL99wrv41rOZioKKYVJG0/exec"
+  style="flex: 2; max-width: 60%;"
+  onsubmit="alert('Form submitted successfully!'); return false;"
+>
     <div style="display: flex; gap: 1rem; margin-bottom: 1rem;">
       <input
         type="text"
