--- a/index.html
+++ b/index.html
@@ -2489,7 +2489,7 @@
       <h1>Meet the Team</h1>
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; padding: 20px; max-width: 1200px; margin: 0 auto;">
         <div style="position: relative; background: white; color: #333; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer;" onclick="showDetail('Satyender Kumar', 'CEO and Founder', 'Satyender is the visionary behind our company, with 7+ years of experience in the industry.')">
-          <img src="./img/team-1.png" alt="Satyender Kumar" style="width: 100%; height: auto;">
+          <img src="./img/team-1.JPG" alt="Satyender Kumar" style="width: 100%; height: auto;">
           <div style="position: absolute; top: 0; left: 0; height: 100%; width: 50px; background: #e50914; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 10px; opacity: 0; transition: opacity 0.3s ease;">
             <a href="https://facebook.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-facebook"></i></a>
             <a href="https://linkedin.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-linkedin"></i></a>
