--- a/index.html
+++ b/index.html
@@ -2501,7 +2501,7 @@
           </div>
         </div>
     
-        <div style="position: relative; background: white; color: #333; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer;" onclick="showDetail('Ajay Kumar Dubey', 'Senior Patent Research Analyst', 'Ajay is dedicated to ensuring client success with over 4+ years of expertise in patent understanding, searching and drafting.')">
+        <div style="position: relative; background: white; color: #333; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer;" onclick="showDetail('Ajay Dubey', 'Senior Patent Research Analyst', 'Ajay is dedicated to ensuring client success with over 4+ years of expertise in patent understanding, searching and drafting.')">
           <img src="./img/team-2.png" alt="Ajay Dubey" style="width: 100%; height: auto;">
           <div style="position: absolute; top: 0; left: 0; height: 100%; width: 50px; background: #e50914; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 10px; opacity: 0; transition: opacity 0.3s ease;">
             <a href="https://facebook.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-facebook"></i></a>
@@ -2509,7 +2509,7 @@
             <a href="https://instagram.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-instagram"></i></a>
           </div>
           <div style="padding: 15px; text-align: center;">
-            <h3 style="margin: 0; font-size: 1.2rem;">Ajay Kumar Dubey</h3>
+            <h3 style="margin: 0; font-size: 1.2rem;">Ajay Dubey</h3>
             <p style="margin: 5px 0 0; font-size: 0.9rem; color: #777;">Senior Patent Research Analyst</p>
           </div>
         </div>
@@ -2529,14 +2529,14 @@
         </div>
     
         <div style="position: relative; background: white; color: #333; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; cursor: pointer;" onclick="showDetail('Vishruti Vishen', 'Patent Research Analyst', 'Vishruti has a deep understanding of client needs and better understanding in handeling project management.')">
-          <img src="./img/team-4.png" alt="Vishruti Vishen" style="width: 100%; height: auto;">
+          <img src="./img/team-4.png" alt="Vishruti Visen" style="width: 100%; height: auto;">
           <div style="position: absolute; top: 0; left: 0; height: 100%; width: 50px; background: #e50914; display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 10px; opacity: 0; transition: opacity 0.3s ease;">
             <a href="https://facebook.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-facebook"></i></a>
             <a href="https://linkedin.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-linkedin"></i></a>
             <a href="https://instagram.com" target="_blank" style="color: white; font-size: 1.5rem; text-decoration: none;"><i class="fa fa-instagram"></i></a>
           </div>
           <div style="padding: 15px; text-align: center;">
-            <h3 style="margin: 0; font-size: 1.2rem;">Vishruti Vishen</h3>
+            <h3 style="margin: 0; font-size: 1.2rem;">Vishruti Visen</h3>
             <p style="margin: 5px 0 0; font-size: 0.9rem; color: #777;">Patent Research Analyst</p>
           </div>
         </div>
