--- a/ourpeople.html
+++ b/ourpeople.html
@@ -1082,16 +1082,16 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		<p style="font-size: 1.2rem; color: #aaa; margin-bottom: 40px;">Explore Our Success Stories and Innovative Projects</p>
 		<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-end;">
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(20px);" onclick="openPopup('Satyender Kumar', 'CEO and Founder with 7+ years of experience in IP domain.', './img/team-1.png')">
-			<img src="./img/team-1.png" alt="Satyender Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+			<img src="./img/team-1.JPG" alt="Satyender Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(-20px);" onclick="openPopup('Ajay Kumar Dubey', 'Senior patent research analyst with 4+ years of experience in IP domain.', './img/team-2.png')">
-			<img src="./img/team-2.png" alt="Ajay Kumar Dubey" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+			<img src="./img/team-2.png" alt="Ajay Dubey" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(20px);" onclick="openPopup('Sanjiv Kumar', 'Data Analyst.', './img/team-3.jpg')">
 			<img src="./img/team-3.jpg" alt="Sanjiv Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(-20px);" onclick="openPopup('Vishruti Vishen', 'Patent Research analyst.', './img/team-4.png')">
-			<img src="./img/team-4.png" alt="Vishruti Vishen" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+			<img src="./img/team-4.png" alt="Vishruti Visen" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		</div>
 	  </section>
