--- a/ourpeople.html
+++ b/ourpeople.html
@@ -1090,7 +1090,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(20px);" onclick="openPopup('Sanjiv Kumar', 'Data Analyst.', './img/team-3.jpg')">
 			<img src="./img/team-3.jpg" alt="Sanjiv Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
-		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(-20px);" onclick="openPopup('Vishruti Vishen', 'Patent Research analyst.', './img/team-4.png')">
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(-20px);" onclick="openPopup('Vishruti Visen', 'Patent Research analyst.', './img/team-4.png')">
 			<img src="./img/team-4.png" alt="Vishruti Visen" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		</div>
