--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
             "sameAs": [
               "https://www.facebook.com/mallorntechnology",
               "https://www.instagram.com/mallorntechnology/",
-              "https://www.linkedin.com/company/mallorntechnology/"
+              "https://www.linkedin.com/company/mallorn-technology-consulting-pvt-ltd/posts/?feedView=all/"
             ]
           }
         ]
@@ -315,7 +315,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                         </li>
                         <li>
                           <a
-                            href="https://www.linkedin.com/company/mallorntechnology/"
+                            href="https://www.linkedin.com/company/mallorn-technology-consulting-pvt-ltd/posts/?feedView=all/"
                             ><i class="fa fa-linkedin"></i
                           ></a>
                         </li>
@@ -1272,7 +1272,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 					<li class="zoom-social_icons-list__item">
 					  <a
 						class="zoom-social_icons-list__link"
-						href="https://www.linkedin.com/company/mallorntechnology/"
+						href="https://www.linkedin.com/company/mallorn-technology-consulting-pvt-ltd/posts/?feedView=all"
 						target="_blank"
 						title="Linkedin"
 						rel="nofollow"
