--- a/index.html
+++ b/index.html
@@ -2861,6 +2861,7 @@
         font-size: 1rem;
       "
     >
+    <option value="select Country">-- Select Country --</option>
     <option value="Afghanistan">Afghanistan</option>
     <option value="Argentina">Argentina</option>
     <option value="Australia">Australia</option>
