--- a/index.html
+++ b/index.html
@@ -2179,29 +2179,29 @@
             <div class="services-track">
                 <div class="services">
                     <div class="service">
-                        <div class="service-icon tm">TM</div>
-                        <div class="service-label">Trademark Registration</div>
+                        <div class="service-icon tm">🚀</div>
+                        <div class="service-label">Patent Searching</div>
                     </div>
+                    <div class="service">
+                      <div class="service-icon patents">PAT</div>
+                      <div class="service-label">Patents Registration</div>
+                  </div>
+                  <div class="service">
+                    <div class="service-icon design">&#x1F4D6;</div>
+                    <div class="service-label">Design Patent</div>
+                </div>
+                <div class="service">
+                  <div class="service-icon iso">🛡️</div> <!-- Updated icon for FTO -->
+                  <div class="service-label">Freedom To Operate</div>
+              </div>
                     <div class="service">
                         <div class="service-icon copyright">&copy;</div>
                         <div class="service-label">Copyright Registration</div>
                     </div>
                     <div class="service">
-                        <div class="service-icon patents">PAT</div>
-                        <div class="service-label">Patents Registration</div>
-                    </div>
-                    <div class="service">
-                        <div class="service-icon design">&#x1F4D6;</div>
-                        <div class="service-label">Design Patent</div>
-                    </div>
-                    <div class="service">
                         <div class="service-icon geo">&#x1F310;</div>
                         <div class="service-label">Geographical Indication</div>
-                    </div>
-                    <div class="service">
-                      <div class="service-icon iso">🛡️</div> <!-- Updated icon for FTO -->
-                      <div class="service-label">Freedom To Operate</div>
-                  </div>
+                    </div>  
                   <div class="service">
                       <div class="service-icon trade">⚖️</div> <!-- Updated icon for Prosecution -->
                       <div class="service-label">Prosecution</div>
@@ -2211,8 +2211,8 @@
                       <div class="service-label">Whitespace Analysis</div>
                   </div>
                   <div class="service">
-                      <div class="service-icon export">🚀</div> <!-- Updated icon for Patent Searching -->
-                      <div class="service-label">Patent Searching</div>
+                      <div class="service-icon export">TM</div> <!-- Updated icon for Patent Searching -->
+                      <div class="service-label">Trademark Registration</div>
                   </div>
                   <div class="service">
                       <div class="service-icon legal">💼</div> <!-- Updated icon for Startup Scouting -->
@@ -2221,47 +2221,47 @@
                 </div>
                 <!-- Duplicate content for seamless scrolling -->
                 <div class="services">
-                    <div class="service">
-                        <div class="service-icon tm">TM</div>
-                        <div class="service-label">Trademark Registration</div>
-                    </div>
-                    <div class="service">
-                        <div class="service-icon copyright">&copy;</div>
-                        <div class="service-label">Copyright Registration</div>
-                    </div>
-                    <div class="service">
-                        <div class="service-icon patents">PAT</div>
-                        <div class="service-label">Patents Registration</div>
-                    </div>
-                    <div class="service">
-                        <div class="service-icon design">&#x1F4D6;</div>
-                        <div class="service-label">Design Patent</div>
-                    </div>
-                    <div class="service">
-                        <div class="service-icon geo">&#x1F310;</div>
-                        <div class="service-label">Geographical Indication</div>
-                    </div>
-                    <div class="service">
-                      <div class="service-icon iso">🛡️</div> <!-- Updated icon for FTO -->
-                      <div class="service-label">Freedom To Operate</div>
-                  </div>
                   <div class="service">
-                      <div class="service-icon trade">⚖️</div> <!-- Updated icon for Prosecution -->
-                      <div class="service-label">Prosecution</div>
-                  </div>
-                  <div class="service">
-                      <div class="service-icon food">🍣</div> <!-- Updated icon for Whitespace Analysis -->
-                      <div class="service-label">Whitespace Analysis</div>
-                  </div>
-                  <div class="service">
-                      <div class="service-icon export">🚀</div> <!-- Updated icon for Patent Searching -->
-                      <div class="service-label">Patent Searching</div>
-                  </div>
-                  <div class="service">
-                      <div class="service-icon legal">💼</div> <!-- Updated icon for Startup Scouting -->
-                      <div class="service-label">Startup Scouting</div>
-                  </div>
+                    <div class="service-icon tm">🚀</div>
+                    <div class="service-label">Patent Searching</div>
                 </div>
+                <div class="service">
+                  <div class="service-icon patents">PAT</div>
+                  <div class="service-label">Patents Registration</div>
+              </div>
+              <div class="service">
+                <div class="service-icon design">&#x1F4D6;</div>
+                <div class="service-label">Design Patent</div>
+            </div>
+            <div class="service">
+              <div class="service-icon iso">🛡️</div> <!-- Updated icon for FTO -->
+              <div class="service-label">Freedom To Operate</div>
+          </div>
+                <div class="service">
+                    <div class="service-icon copyright">&copy;</div>
+                    <div class="service-label">Copyright Registration</div>
+                </div>
+                <div class="service">
+                    <div class="service-icon geo">&#x1F310;</div>
+                    <div class="service-label">Geographical Indication</div>
+                </div>  
+              <div class="service">
+                  <div class="service-icon trade">⚖️</div> <!-- Updated icon for Prosecution -->
+                  <div class="service-label">Prosecution</div>
+              </div>
+              <div class="service">
+                  <div class="service-icon food">🍣</div> <!-- Updated icon for Whitespace Analysis -->
+                  <div class="service-label">Whitespace Analysis</div>
+              </div>
+              <div class="service">
+                  <div class="service-icon export">TM</div> <!-- Updated icon for Patent Searching -->
+                  <div class="service-label">Trademark Registration</div>
+              </div>
+              <div class="service">
+                  <div class="service-icon legal">💼</div> <!-- Updated icon for Startup Scouting -->
+                  <div class="service-label">Startup Scouting</div>
+              </div>
+            </div>
             </div>
         </div>
     </section>
