team-1.jpg updated

--- a/ourpeople.html
+++ b/ourpeople.html
@@ -1081,7 +1081,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		<h2 style="font-size: 2.5rem; margin-bottom: 10px;">Our Brain</h2>
 		<p style="font-size: 1.2rem; color: #aaa; margin-bottom: 40px;">Explore Our Success Stories and Innovative Projects</p>
 		<div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; align-items: flex-end;">
-		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(20px);" onclick="openPopup('Satyender Kumar', 'CEO and Founder with 7+ years of experience in IP domain.', './img/team-1.png')">
+		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(20px);" onclick="openPopup('Satyender Kumar', 'CEO and Founder with 7+ years of experience in IP domain.', './img/team-1.jpg')">
 			<img src="./img/team-1.JPG" alt="Satyender Kumar" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50px; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
 		  </div>
 		  <div style="position: relative; width: 150px; height: 300px; overflow: hidden; border-radius: 50px; cursor: pointer; transform: translateY(-20px);" onclick="openPopup('Ajay Kumar Dubey', 'Senior patent research analyst with 4+ years of experience in IP domain.', './img/team-2.png')">
