--- a/packaging.html
+++ b/packaging.html
@@ -1174,7 +1174,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         <div style="display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;">
           <div style="background: #f9f9f9; border-radius: 16px; padding: 1.5rem; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease; width: 300px;" onmouseover="this.style.transform='translateY(-10px)'; this.querySelector('.arrow').style.fontSize='1.4rem';" onmouseout="this.style.transform='translateY(0)'; this.querySelector('.arrow').style.fontSize='1rem';">
             <div style="display: flex; justify-content: center; margin-bottom: 1rem;">
-              <img src="./img/team-1.png" alt="Satyender Kumar" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
+              <img src="./img/team-1.JPG" alt="Satyender Kumar" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <h3 style="color: #e40046; margin-bottom: 0.5rem;">Satyender Kumar</h3>
             <p style="color: #333; margin-bottom: 1rem;">CEO and Founder</p>
