--- a/manufacturing.html
+++ b/manufacturing.html
@@ -1141,6 +1141,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
       </section>
       
       <section style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 2rem; background: #f9f9f9; border-radius: 16px; margin: 2rem auto; max-width: 1200px; width: 100%; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); transition: transform 0.3s ease;" onmouseover="this.style.transform='translateY(-10px)'" onmouseout="this.style.transform='translateY(0)'">
+
+		<div style="flex: 1; display: flex; justify-content: center; animation: slideInRight 1.5s ease;">
+			<img src="./img/manufacturing-1.png" alt="Vertical Automotive Image" style="width: auto; height: 100%; max-height: 500px; border-radius: 8px; object-fit: cover; animation: fadeIn 2s ease;">
+		  </div>
 		<!-- Text Content -->
 		<div style="flex: 1; padding: 1rem; animation: fadeIn 1.5s ease; min-width: 300px; max-width: 600px;">
 		  <h2 style="color: #e40046; font-size: 1.8rem; margin-bottom: 1rem;">Mallorn Technology: Your Manufacturing IP Experts</h2>
@@ -1158,8 +1162,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		  </p>
 		</div>
 	  
-		<!-- Image Content -->
-		
 	  </section>
 
       <section style="display: flex; align-items: center; justify-content: center; padding: 2rem; background: #f9f9f9; border-radius: 16px; margin: 2rem auto; max-width: 1200px; width: 100%; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); transition: transform 0.3s ease;" onmouseover="this.style.transform='translateY(-10px)'" onmouseout="this.style.transform='translateY(0)'">
