logo and article section updated

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
               "@type": "ImageObject",
               "inLanguage": "en-GB",
               "@id": "https://mallorntechnology.com/#/schema/logo/image/",
-              "url": "img/logo.png",
-              "contentUrl": "img/logo.png",
+              "url": "img/logo.gif",
+              "contentUrl": "img/logo.gif",
               "width": 576,
               "height": 576,
               "caption": "MALLORN"
@@ -1155,14 +1155,14 @@
                             fetchpriority="high"
                             width="576"
                             height="576"
-                            src="/img/logo.png"
+                            src="/img/logo.gif"
                             class="custom-logo"
                             alt="MALLORN"
                             decoding="async"
                             srcset="
-                              /img/logo.png 576w,
-                              /img/logo.png 300w,
-                              /img/logo.png 150w
+                              /img/logo.gif 576w,
+                              /img/logo.gif 300w,
+                              /img/logo.gif 150w
                             "
                             sizes="(max-width: 576px) 100vw, 576px"
                         /></a>
@@ -1215,14 +1215,14 @@
                           fetchpriority="high"
                           width="576"
                           height="576"
-                          src="/img/logo.png"
+                          src="/img/logo.gif"
                           class="custom-logo"
                           alt="MALLORN"
                           decoding="async"
                           srcset="
-                            /img/logo.png 576w,
-                            /img/logo.png 300w,
-                            /img/logo.png 150w
+                            /img/logo.gif 576w,
+                            /img/logo.gif 300w,
+                            /img/logo.gif 150w
                           "
                           sizes="(max-width: 576px) 100vw, 576px"
                       /></a>
