--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
               "@type": "ImageObject",
               "inLanguage": "en-GB",
               "@id": "https://mallorntechnology.com/#/schema/logo/image/",
-              "url": "img/logo.gif",
-              "contentUrl": "img/logo.gif",
+              "url": "img/logo_7june.png",
+              "contentUrl": "img/logo_7june.png",
               "width": 576,
               "height": 576,
               "caption": "MALLORN"
@@ -1155,14 +1155,14 @@
                             fetchpriority="high"
                             width="576"
                             height="576"
-                            src="/img/logo.gif"
+                            src="/img/logo_7june.png"
                             class="custom-logo"
                             alt="MALLORN"
                             decoding="async"
                             srcset="
-                              /img/logo.gif 576w,
-                              /img/logo.gif 300w,
-                              /img/logo.gif 150w
+                              /img/logo_7june.png 576w,
+                              /img/logo_7june.png 300w,
+                              /img/logo_7june.png 150w
                             "
                             sizes="(max-width: 576px) 100vw, 576px"
                         /></a>
@@ -1215,14 +1215,14 @@
                           fetchpriority="high"
                           width="576"
                           height="576"
-                          src="/img/logo.gif"
+                          src="/img/logo_7june.png"
                           class="custom-logo"
                           alt="MALLORN"
                           decoding="async"
                           srcset="
-                            /img/logo.gif 576w,
-                            /img/logo.gif 300w,
-                            /img/logo.gif 150w
+                            /img/logo_7june.png 576w,
+                            /img/logo_7june.png 300w,
+                            /img/logo_7june.png 150w
                           "
                           sizes="(max-width: 576px) 100vw, 576px"
                       /></a>
@@ -5933,7 +5933,7 @@
      
      <section id="welcome-popup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); justify-content: center; align-items: center; z-index: 9999;">
          <div style="background: white; border-radius: 10px; padding: 20px; width: 90%; max-width: 400px; text-align: center; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);">
-             <img src="./img/logo.png" alt="User Image" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 20px;">
+             <img src="./img/logo_7june.png" alt="User Image" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 20px;">
              <h1 style="font-size: 24px; margin-bottom: 10px;">Welcome TO</h1>
              <p style="font-size: 16px; color: #666; margin-bottom: 20px;">Mallorn Technology Consulting Pvt Limited</p>
              <div style="text-align: left; margin-bottom: 20px;">
