blog and article page updated

--- a/blogs.html
+++ b/blogs.html
@@ -1450,11 +1450,11 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                     </div>
                     <div class="card-content">
                         <span class="category-tag">Patents</span>
-                        <h3>5 Essential Steps to Protect Your Invention</h3>
-                        <p>Learn how to navigate the patent application process effectively and avoid common pitfalls that inventors face when protecting their intellectual property.</p>
+                        <h3>Understanding Patents: Protection for Innovation</h3>
+                        <p>A patent is a form of intellectual property that grants inventors the legal right to exclusively make, use, and sell their inventions for a specified period—typically 20 years from the date of filing, in the case of utility patents.</p>
                         <div class="card-meta">
                             <span>June 12, 2023</span>
-                            <a href="#" class="read-more">Read Article</a>
+                            <a href="understandingpatent.html" class="read-more">Read Article</a>
                         </div>
                     </div>
                 </div>
