facebook, insta and linkedin icon updated in index.html

--- a/index.html
+++ b/index.html
@@ -1082,18 +1082,18 @@
                       <ul>
                         <li>
                           <a href="https://www.facebook.com/mallorntechnology"
-                            ><i class="fa fa-facebook"></i
+                            ><i class="fab fa-facebook"></i
                           ></a>
                         </li>
                         <li>
                           <a href="https://www.instagram.com/mallorntechnology/"
-                            ><i class="fa fa-instagram"></i
+                            ><i class="fab fa-instagram"></i
                           ></a>
                         </li>
                         <li>
                           <a
                             href="https://www.linkedin.com/company/mallorntechnology/"
-                            ><i class="fa fa-linkedin"></i
+                            ><i class="fab fa-linkedin"></i
                           ></a>
                         </li>
                       </ul>
